@@ -240,7 +240,7 @@ default_statuswrl_layout=4
 # OS and distribution, so you may have to tweak this to
 # work on your system.
 
-ping_syntax=/bin/ping -n -U -c 5 $HOSTADDRESS$
+ping_syntax=echo -n -U -c 5 $HOSTADDRESS$
 
 
 
